# DiscordShiro

./: boardgen.py  errorLogs.txt  keep_alive.py  keys.env  main.py  nocrash.py  pyproject.toml  state.json
.upm/: store.json  store.json422633682
