[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "discordshiro"
version = "0.1.0"
[tool.poetry.dependencies]
colorama = "^0.4.3"
flask = "^1.1"
python = "^3.8"
attrs = "^19.3.0"
"discord.py" = "^1.3.4"
discord = "^1.7.3"
replit = "^3.2.4"
[tool.poetry.dev-dependencies]
